--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icon": "^1.0.0"
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
